--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/jpg" href="images/fav.png">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Our Portfolio - Code Together</title>
+    <script>
+      function myfunction() {
+         var preloader = document.getElementById('preloder');
+         preloader.style.display = 'none';
+      }
+   </script>
   </head>
-  <body>
+  <body onload="myfunction()">
+    <div id="preloder">
+       <div class="loader"></div>
+    </div>
     <div id="header">
       <div class="container">
         <nav>
-          <a href="index.html"><img src="images/logo1.png" class="logo" /></a>
+         <img src="images/logo1.png" class="logo" />
           <ul id="side-menu">
             <li><a href="#header">home</a></li>
             <li><a href="#about">about</a></li>
@@ -112,31 +122,31 @@
             <h1 class="title">Our Work</h1>
             <div class="work-list">
               <div class="work">
-                <img src="images/profile2.jpg" >
+                <img src="images/Screenshot 2024-07-29 193549.png" >
                 <div class="mask">
                   <h3>TOK-BROKER</h3>
                   <p>Our platform offers a seamless and efficient process for real estate transactions, from posting a property to finalizing the purchase. Our platform facilitates the negotiation process, allowing buyers and sellers to communicate and reach mutually beneficial agreements. By using our platform, users can save time, effort, and money throughout the entire real estate transaction process.</p>
-                  <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                  <a href="https://github.com/CodeTogetherr/TOK-BROKER" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                 </div>
               </div>
               <div class="work">
-                <img src="images/profile2.jpg" >
+                <img src="images/WhatsApp Image 2024-07-29 at 19.29.54_e9e40b38.jpg" >
                 <div class="mask">
                   <h3>Wadiya Global</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quia dolorum, eius blanditiis veniam ab fugit quis iste recusandae itaque.</p>
-                  <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                  <p>Welcome to Wadiya Global Tour and Travel, your gateway to the enchanting beauty of Kashmir. Nestled amidst the majestic Himalayas, Kashmir is a land of breathtaking landscapes, serene lakes, lush green valleys, and snow-capped mountains. At Wadiya Global Tour and Travel, we are dedicated to providing you with an unforgettable experience as you explore the mesmerizing beauty and rich culture of this heavenly destination.</p>
+                  <a href="https://wadiyaglobaltourandtravel.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                 </div>
               </div>
               <div class="work">
-                <img src="images/profile2.jpg">
+                <img src="images/Screenshot 2024-07-29 194249.png">
                 <div class="mask">
                   <h3>Anime Play</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quia dolorum, eius blanditiis veniam ab fugit quis iste recusandae itaque.</p>
-                  <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                  <p>Anime Play is a free site Project to watch anime and you can even download subbed or dubbed anime in ultra HD quality without any registration or payment.</p>
+                  <a href="https://github.com/CodeTogetherr" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                 </div>
               </div>
             </div>
-            <a href="#" class="p-btn">See more</a>
+            <a href="https://github.com/CodeTogetherr"target="_blank" class="p-btn">See more</a>
         </div>
     </div>
 
@@ -148,11 +158,11 @@
             <p><i class="fa-solid fa-envelope"></i>codetogetherr@gmail.com</p>
             <p><i class="fa-solid fa-mobile"></i>+91 9149964278</p>
             <div class="social-icons">
-              <a href=""><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.facebook.com/tanzeel.naqash/"target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://x.com/imkhalid1422?t=wJjTzkKTckTAfmCcVXYOwg&s=08" target="_blank"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.instagram.com/im.khalid59/" target="_blank"><i class="fab fa-instagram"></i></a>
               <a href="https://wa.me/9149964278" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-              <a href="#"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/CodeTogetherr" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
             <a href="resume/Our-Resume.pdf" class="c-btn">Download our CV</a>
           </div>
@@ -166,12 +176,15 @@
           </div>
         </div>
         <div class="enquery">
-          <h2>have a <span>Question?</span> <a href="#" class="q-btn">Ask Now</a></h2>
+          <h2>have a <span>Question?</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfXZwEZP9klIQXgNrXNskI6pcQCYSSSjuULk_o04MLJq5l64w/viewform?usp=sf_link" target="_blank" class="q-btn">Ask Now</a></h2>
          </div>
         <div class="copyright">© Copyright by <span id="currentYear">2024</span> <span><a href="index.html">Code Together</a></span> | All Rights Reserved!</div>
       </div>
       </div>
     </div>
+    <div class="page-up">
+      <a href="#" id="scrollToTopButton"><span class="fas fa-arrow-up"></span></a>
+  </div>
 
     <script>
       var tablinks = document.getElementsByClassName("tab-links");
@@ -198,5 +211,12 @@ function closemenu(){
   sidemenu.style.right = "-200px";
 }
   </script>
+  <script> 
+     $("#scrollToTopButton").click(function() {
+    $("html, body").animate({ scrollTop: 0 }, "slow");
+    return false;
+ });
+</script>
+  
   </body>
 </html>
